[package]
name = "backend"
version = "0.1.0"
authors = ["Adrian Wersching <dev@awersching.de>"]
edition = "2018"

[dependencies]
osmpbfreader = "0.13.4"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.55"
bincode = "1.2.1"
zip = "0.5.5"

actix-web = "2.0.0"
actix-rt = "1.1.0"
actix-files = "0.2.1"
actix-cors = "0.2.0"
futures = "0.3.5"
reqwest = { version = "0.10.6", features = ["blocking"] }

strum = "0.18.0"
strum_macros = "0.18.0"
log = "0.4.8"
log4rs = "0.12.0"
